--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
          ]}.
 
 {port_specs, [
-	      {"uds_dist.so", ["c_src/*.c"]}
+	      {"priv/uds_dist.so", ["c_src/*.c"]}
 	     ]}.
 
 {port_env, 
